fixed position of keyboard on bottom of screen

--- a/frog.css
+++ b/frog.css
@@ -1,11 +1,13 @@
 .frog {
-  height: calc(400px / var(--_d, 1) );
-  width: calc(400px / var(--_d, 1) );
+  height: calc(200px / var(--_d, 1) );
+  width: calc(200px / var(--_d, 1) );
+  /*width: 100%;*/
   position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
+  /*transform: translate(-50%, -50%);*/
+  top: 0;
+  left: 0;
   z-index: 500;
+  animation: floatUp 2s 1 linear forwards;
 }
 .frogface {
   background-color: var(--_face1, #8ebc00);
@@ -58,7 +60,7 @@
 }
 
 /* variables that relate to the keyboard relative to which the frogs are placed */
-.kb { --_d: 4 }
+.kb { --_d: 2 }
 
 /* variables to change the colors of the frog face depending on the note on the scale */
 .frog-A {
@@ -120,4 +122,14 @@
   --_face1: #8ebc00;
   --_face2: #c1d218;
   --_face3: #477a26;
+}
+
+@keyframes floatUp {
+  0% {
+    transform: translateY(0, -100px);
+  }
+  
+  100% {
+    transform: translateY(-100vh);
+  }
 }
